--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -43,7 +43,10 @@ jobs:
         run: echo "tag=v${{ github.run_number }}-$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
       - name: Build and Test
-        run: docker build . --file build/docker/Dockerfile --tag ${{ steps.generate-tag.outputs.tag }} --tag solarwinds-otel-collector:latest
+        run: >
+          docker build . --file build/docker/Dockerfile
+          --tag solarwinds-otel-collector:${{ steps.generate-tag.outputs.tag }}
+          --tag solarwinds-otel-collector:latest
 
       - name: Integration Tests
         working-directory: internal/e2e
